# ax-serving

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-AGPL.md  LICENSE-COMMERCIAL.md  LICENSING.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.6.1.md  RELEASE_NOTES_v1.7.0.md  RELEASE_NOTES_v1.8.0.md  RELEASE_NOTES_v1.9.0.md  RELEASE_NOTES_v2.0.0.md  ROADMAP.md  cbindgen.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
.internal/adr/: ADR-001-inference-backend.md  ADR-002-serving-architecture.md  ADR-002-software-value-boundary-vs-hardware-deployment-context.md  ADR-003-openai-rest-api.md  ADR-004-kv-cache-strategy.md  ADR-005-metal-strategy.md  ADR-006-crate-structure.md  ADR-007-c-api-shim.md  ADR-008-thermal-scheduling.md  ADR-009-configuration.md  ADR-010-backend-fallback.md  ADR-011-service-level-performance-strategy.md  ADR-012-local-multi-worker-orchestration-direct-nats.md  ADR-012-local-multi-worker-orchestration.md  ADR-013-mistralrs-primary-backend.md  README.md
.internal/bugs/: SUMMARY.md
.internal/prd/: IMPLEMENTATION-PLAN-AX-SERVING.md  PRD-AX-SERVING.md
BUGS/: 001-registry-unwrap.md  002-backend-expect.md  003-http-client-expect.md  004-silent-job-delete.md  005-silent-nats-ack.md  006-json-indexing.md  007-libllama-sampler-leak.md  008-libllama-stop-sequence-leak.md  009-llamacpp-cache-telemetry-blocking.md  010-thor-unbounded-shutdown.md  011-cache-key-missing-params.md  012-llamacpp-hardcoded-eos.md  013-shim-softmax-divzero.md  014-grpc-timing-auth.md  015-thor-unbounded-startup-wait.md  016-model-id-validation-mismatch.md  017-permodel-scheduler-leak.md  018-config-zero-validation.md  019-worker-max-inflight-zero.md  020-eval-tokens-no-kv-accumulation.md  021-libllama-pool-leak-on-panic.md  022-thor-no-inflight-enforcement.md  023-thor-shutdown-race.md  024-compare-divzero-delta.md  025-cache-bench-no-timeout.md  026-soak-nan-rss-drift.md  027-tune-toml-to-yaml-extension.md  028-cli-reregister-no-interval-update.md  029-silent-channel-close.md  030-ipv6-url-missing-brackets.md  031-thor-zero-heartbeat-busyloop.md  032-thor-nonatomic-reregister.md  033-thor-unbounded-response-body.md  034-thor-runtime-dead-code.md  035-thor-advertised-addr-default.md  036-shim-arc-dup-use-after-unload.md  037-shim-unbounded-token-buf.md  038-health-poller-backoff-overflow.md  039-health-poller-spawn-fatal.md  040-sysconf-unchecked-error.md  (+81 more)
REPORTS/: 2026-03-25-progress.md
benchmarks/: baseline-llamacpp.json  baseline-mixed.json  baseline-multi-worker.json  baseline.json
config/: backends.yaml  serving.example.yaml  serving.offline-enterprise.yaml  serving.yaml
crates/ax-serving-api/: Cargo.toml  build.rs
crates/ax-serving-api/src/: audit.rs  auth.rs  cache.rs  config.rs  dashboard.html  embedding_batcher.rs  generation_batcher.rs  lib.rs  license.rs  metrics.rs  project_policy.rs  registry.rs  scheduler.rs
crates/ax-serving-api/src/grpc/: mod.rs  service.rs
crates/ax-serving-api/src/orchestration/: direct.rs  health_ticker.rs  internal_routes.rs  jobs.rs  mod.rs  nats.rs  nats_worker.rs  policy.rs  proxy_handlers.rs  queue.rs  registry.rs
crates/ax-serving-api/src/rest/: admin.rs  inference.rs  license.rs  mod.rs  models.rs  routes.rs  schema.rs  validation.rs
crates/ax-serving-api/src/utils/: mod.rs  request_meta.rs  time.rs
crates/ax-serving-api/tests/: graceful_shutdown.rs  model_management.rs  orchestration.rs
crates/ax-serving-bench/: Cargo.toml
crates/ax-serving-bench/src/: baseline.rs  bench.rs  bench_common.rs  cache_bench.rs  compare.rs  load_config.rs  main.rs  mixed.rs  multi_worker.rs  perf.rs  raw_mistralrs_bench.rs  regression.rs  report.rs  service_perf.rs  soak.rs
crates/ax-serving-cli/: Cargo.toml
crates/ax-serving-cli/src/: api_main.rs  doctor.rs  logging.rs  main.rs  output.rs  serve.rs  support.rs  thor.rs  tune.rs
crates/ax-serving-cli/tests/: thor_cli.rs
crates/ax-serving-engine/: Cargo.toml  build.rs
crates/ax-serving-engine/src/: ax_engine.rs  backend.rs  gguf_meta.rs  lib.rs  libllama.rs  llamacpp.rs  memory.rs  mlx.rs  routing.rs  thermal.rs
crates/ax-serving-py/: Cargo.toml
crates/ax-serving-py/src/: lib.rs
crates/ax-serving-shim/: Cargo.toml
crates/ax-serving-shim/src/: context.rs  lib.rs  model.rs  sampling.rs  tokenize.rs  types.rs
crates/ax-serving-shim/tests/: compat.rs
crates/ax-thor-agent/: Cargo.toml
crates/ax-thor-agent/src/: agent.rs  config.rs  lib.rs  main.rs  proxy.rs  runtime.rs  runtime_main.rs  sglang.rs
crates/ax-thor-agent/tests/: e2e.rs
docs/: advantages-and-use-cases.md  ax-code-integration.md  competitive-landscape.md  icp-and-demand.md  maintainability-refactor-plan.md  market-positioning.md  python-sdk.md
docs/adr/: ADR-001-target-market-and-product-scope.md  README.md
docs/contracts/: ax-fabric-runtime-contract.md  ax-serving-contract-change-template.md  ax-serving-node-contract.md  ax-serving-public-contract-inventory.md  ax-serving-runtime-responsibility-inventory.md  enterprise-compatibility-metadata.example.yaml
docs/perf/: service-tuning.md
docs/prd/: PRD-AX-SERVING-ENTERPRISE-EXECUTION-v1.0.md  PRD-AX-SERVING-OSS-ENTERPRISE-BOUNDARY-v1.0.md  PRD-AX-SERVING-v3.0.md
docs/runbooks/: enterprise-private-repo-bootstrap.md  enterprise-release-governance.md  multi-worker.md  releases.md
include/: llama.h
packaging/: build-pkg.sh  distribution.xml
packaging/homebrew/: ax-serving.rb
proto/: ax_serving.proto
scripts/: bench_compare.sh  bench_llamacpp_vs_ax.sh  bench_llamacpp_vs_ax_http.sh  ci-install-native-deps.sh  load_test_chat.py  test_cache_comprehensive.py
sdk/python/: pyproject.toml
sdk/python/ax_serving/: __init__.py  _grpc.py  _openai.py  types.py
sdk/python/ax_serving/_proto/: __init__.py  ax_serving_pb2.py  ax_serving_pb2_grpc.py
sdk/python/scripts/: gen_proto.sh
sdk/python/tests/: test_openai_client.py  test_package_metadata.py
(+7 files in other folders)
