[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "2.0.2"
authors = ["AutomatosX Team (DEFAI Private Limited)"]
license = "AGPL-3.0-only"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["fs", "rt-multi-thread", "net", "macros", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# REST
axum = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["timeout"] }

# Hashing
rustc-hash = "2"

# Half precision
half = { version = "2", features = ["num-traits"] }

# Memory / I/O
memmap2 = "0.9"
bytemuck = "1"

# Testing
rstest = "0.24"

# Utilities
futures = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
ipnet = "2"

# HTTP client (llama.cpp backend subprocess proxy)
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }

# YAML config parsing (backends.yaml)
serde_yaml = "0.9"
redis = { version = "0.27", features = ["tokio-comp"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hdrhistogram = "7"
dashmap = "6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
