[package]
name = "ax-serving-bench"
license.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "ax-serving-bench"
path = "src/main.rs"

[dependencies]
ax-serving-engine = { path = "../ax-serving-engine" }
ax-serving-api = { path = "../ax-serving-api" }

tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
