[package]
name = "ax-serving-py"
license.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "ax_serving"
crate-type = ["cdylib"]

[dependencies]
ax-serving-engine = { path = "../ax-serving-engine" }

pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
