[package]
name = "ax-thor-agent"
license.workspace = true
version.workspace = true
edition.workspace = true

[[bin]]
name = "ax-thor-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
futures = { workspace = true }
